fix deploy scripts

--- a/nginx/open_municipio.uwsgi.ini
+++ b/nginx/open_municipio.uwsgi.ini
@@ -3,22 +3,22 @@
 
 # Django-related settings
 # the base directory (full path)
-chdir           = /home/oo/www.psicologipuglia.it/private/open_municipio
+chdir           = /home/oo/oo.psicologipuglia.it/private/open_municipio
 # Django's wsgi file
 module          = wsgi
 # the virtualenv (full path)
-home            = /home/oo/www.psicologipuglia.it/private/venv
+home            = /home/oo/oo.psicologipuglia.it/private/venv
 
 
 # process-related settings
 # master
 master          = true
 # maximum number of worker processes
-processes       = 10
+processes       = 3
 # the pid of the master process
-pidfile         = /home/oo/www.psicologipuglia.it/private/nginx/open_municipio.pid
+pidfile         = /home/oo/oo.psicologipuglia.it/private/nginx/open_municipio.pid
 # the socket (use the full path to be safe
-socket          = /home/oo/www.psicologipuglia.it/private/nginx/open_municipio.sock
+socket          = /home/oo/oo.psicologipuglia.it/private/nginx/open_municipio.sock
 # ... with appropriate permissions - may be needed
 # chmod-socket    = 664
 # clear environment on exit
