fix settings and deploy scripts

--- a/nginx/open_municipio.uwsgi.ini
+++ b/nginx/open_municipio.uwsgi.ini
@@ -3,9 +3,9 @@
 
 # Django-related settings
 # the base directory (full path)
-chdir           = /home/oo/oo.psicologipuglia.it/private/open_municipio
+chdir           = /home/oo/oo.psicologipuglia.it/private/
 # Django's wsgi file
-module          = wsgi
+module          = open_municipio.wsgi_staging
 # the virtualenv (full path)
 home            = /home/oo/oo.psicologipuglia.it/private/venv
 
